--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -907,6 +907,9 @@ color: #fff;
 	.our_port_sec_responsive_hm {
 		display: block;
 	}
+	.download_pdf_hm_slider {
+		margin-top: 5px;
+	}
 }
 
 @media (min-width: 1024px) {
@@ -919,6 +922,9 @@ color: #fff;
   #hero {
     height: 120vh;
   }
+	.download_pdf_hm_slider {
+		margin-top: 5px;
+	}
 }
 
 /*--------------------------------------------------------------
